--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<!--    <link rel="shortcut icon" href="castle.ico" type="image/x-icon">-->
-<!--    <link rel="icon" href="castle.ico" type="image/x-icon">-->
+    <link rel="shortcut icon" href="castle.ico" type="image/x-icon">
+    <link rel="icon" href="castle.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css" type="text/css" media="screen, projection">
     <title>CastleGame</title>
     <meta name="keywords" content="игра, карты, средневековье, крестьяне">
